# emacs

./: .emacs  .gitignore  .stow-local-ignore  AGENTS.md  README.md  TODO.org
.cfg-post.d/: emacs  org-protocol
.emacs.d/: aspiers-1-theme.el  debug-init.el
.emacs.d/batch/: as-org-agenda-export.el
.emacs.d/custom/: as-custom-24.5.el  as-custom-25.2.el  as-custom-26.1.el  as-custom-26.2.el  as-custom-26.3.el  as-custom-27.1.el  as-custom-27.2.el  as-custom-28.1.el  as-custom-28.2.el  as-custom-29.1.el  as-custom-29.3.el  as-custom-29.4.el  as-custom-30.1.el
.emacs.d/elpa/git-gutter-0.19/: git-gutter-autoloads.el  git-gutter-pkg.el
.emacs.d/elpa/idomenu-0.1/: idomenu-autoloads.el
.emacs.d/elpa/inf-ruby-2.2.4/: inf-ruby-autoloads.el
.emacs.d/elpa/magit-1.2.0/: magit-autoloads.el
.emacs.d/elpa/magithub-0.2/: magithub-autoloads.el
.emacs.d/elpa/multiple-cursors-1.2.1/: multiple-cursors-autoloads.el
.emacs.d/elpa/org2blog-0.5/: org2blog-autoloads.el
.emacs.d/elpa/xml-rpc-1.6.8/: xml-rpc-autoloads.el  xml-rpc-pkg.el
.emacs.d/init.d/: 00-as-message-log-max.el  00-vars.el  01-as-quick-startup.el  05-as-load-paths.el  05-load-paths.el  08-as-org-mode.el  08-org-mode.el  09-elpa.el  09-package.el  10-el-get.el  11-smart-mode-line.el  20-org-mode.el  40-as-guide-key.el  40-as-init.el  41-functions.el  42-as-key-bindings.el  43-as-point-movement.el  44-misc.el  46-major-modes.el  47-as-minor-modes.el  47-as-undo-tree.el  47-hideshow.el  47-minor-modes.el  48-dual-modes.el  50-as-elp.el  50-custom.el  90-as-mode-lighters.el  90-mode-lighters.el  91-cus-edit.el  README  TODO  as-ai.el  as-autotext.el  as-beeminder.el  as-bindings.el  as-blockchain.el  as-blog.el  as-bookmarks.el  as-buffers.el  as-c.el  (+124 more)
.emacs.d/lib/: .gitignore  as-bounce-buffer.el  as-cperl.el  as-destroy-buffer.el  as-display-buffer-names.el  as-file-functions.el  as-find-file-matching-regexp-hook.el  as-line-ops.el  as-list-utils.el  as-make-backup-file-name.el  as-org-agenda-lib.el  as-org-agenda.el  as-org-jump.el  as-org-stats.el  as-quelpa.el  as-rename-current-buffer.el  as-word-motion.el  bn-end-of-line-but-one.el  bn-kill-stuff.el  bn-secondary-region.el  color-theme-pastels-on-dark.el  fill-common-prefix-region.el  find-file-in-dir.el  find-location-in-file.el  flowed-text.el  org-action-verbs.el  org-jump-olp.el  org-meeting-actions.el  org-refile-narrowed.el  pastels-on-dark-aspiers-theme.el  set-any-var.el  sunlight-theme.el  with-packages.el
.emacs.d/snippets/perl-mode/: ar  arg  carp  cd  cl  class  cmeth  cmethx  constr  db  debug  debugf  dump  find  for  foreach  getopts  h1  h2  hb  if  la  main  md  me  meth  methx  new  od  open  opendir  openfrom  opento  opentox  openw  openwh  over  p  pf  pkg  (+7 more)
.emacs.d/snippets/sh-mode/: abort  bunzip  clog  de  die  dlog  echonn  else  elseif  err  fe  filesize  for  fr  func  fx  getopts  gunzip  hb  hbb  here  if  ifdie  inst  log  me  neq  nge  ngex  ngt  ngtx  nle  nlex  nlt  nltx  nne  nroot  passthru  qr  requireutil  (+15 more)
.emacs.d/test/: debug-init.el  key-chord-which-key.el  package-autoloads.el  which-key.el
.emacs.d/themes/: pastels-on-dark-aspiers-theme.el  sunlight-theme.el
.local/share/applications/: quick-emacs.desktop
.netrc.d/: .dir-locals.el
.shared_env.d/: emacs
.shared_env.d/person-adam.spiers/: emacs
.sig/Oxford/: Quake  job  job_with_disclaimer  normal
.sig/RAM/: RTFM  adam@spiers.net-large  simple
.sig/perl/: Oxford_e-mail  japh_5.004_only  japh_indirect  japh_method_chain
.zsh/functions/: _emk
lib/emacs/: .cvsignore  .gitignore  Makefile  compile
lib/emacs/color-theme-6.6.0/: Makefile
lib/emacs/fun/: color-theme-base.el  color-theme.el  faith.el  keywiz.el  pastels-on-dark-theme.el
lib/emacs/major-modes/: as-cperl.el  as-erc.el  as-sh-mode-exts.el  cperl-mode.el  css-mode.el  darcsum.el  dired+.el  ecmascript-mode.el  erin.el  html-helper-mode.el  html-mode.el  inf-ruby.el  mediawiki.el  mgp-mode-cd.el  org-annotation-helper.el  org-iswitchb.el  pjb-manager.el  rpm-spec-mode.el  rst.el  ruby-mode.el  sawfish.el  sdf.el  todo-mode.el  xtla-browse.el  xtla-core.el  xtla-defs.el  xtla-version.el  xtla-xemacs.el  xtla.el
lib/emacs/major-modes/xtla/: INSTALL  Makefile.in  configure  configure.ac  xtla-autoloads.el  xtla-autoloads.elc  xtla-browse.el  xtla-browse.elc  xtla-core.el  xtla-core.elc  xtla-defs.el  xtla-defs.elc  xtla-emacs.el  xtla-emacs.elc  xtla-load-install.el.in  xtla-load.el  xtla-load.el.in  xtla-load.elc  xtla-tests.el  xtla-tests.elc  xtla-tips.el  xtla-tips.elc  xtla-version.el  xtla-version.elc  xtla.el  xtla.elc
lib/emacs/major-modes/xtla/debian/: README.Debian  changelog  control  copyright  rules  xtla.dirs  xtla.emacsen-install  xtla.emacsen-remove  xtla.emacsen-startup
lib/emacs/major-modes/xtla/docs/: ANNOUNCEMENTS  HACKING
lib/emacs/major-modes/xtla/lisp/: Makefile.in  xtla-autoconf.el  xtla-baz.el  xtla-bconfig.el  xtla-browse.el  xtla-build.el  xtla-core.el  xtla-defs.el  xtla-emacs.el  xtla-gnus.el  xtla-lisp.el  xtla-site.el.in  xtla-tests.el  xtla-tips.el  xtla-xemacs.el  xtla.el
lib/emacs/major-modes/xtla/lisp/contrib/: ewoc.el
lib/emacs/major-modes/xtla/scripts/: make-deb-pkg.sh  tla-tree-revision.sh  xtla-cron.sh
lib/emacs/major-modes/xtla/texinfo/: Makefile.in  xtla.texinfo
lib/emacs/minor-modes/: auto-recomp.el  blinking-cursor.el  darcs.el  folding.el  visws.el
lib/emacs/shortcuts/: org-agenda-daily-review.el  org-agenda-today.el  org-agenda-weekly-review.el  org-agenda.el  org-capture-personal-TODO-from-mairix.el  (+7 more)
lib/xmacro/: org-agenda  org-agenda-daily-review  org-agenda-review  org-capture  org-capture-personal-TODO-mail  org-capture-personal-diary-mail  org-capture-supportconfig  org-capture-work-learning-mail  org-capture-work-mail  org-day-agenda  org-jump-Toucan-todo  org-jump-personal-diary  org-jump-personal-note  org-jump-personal-todo  org-jump-to-clock  org-jump-work-diary  org-jump-work-todo  org-remember  org-remember-personal-TODO-mail  org-remember-personal-diary-mail  org-remember-personal-mail  org-remember-work-mail
(+1338 files in other folders)
